--- a/JSearch/package.json
+++ b/JSearch/package.json
@@ -4,7 +4,9 @@
   "description": "Job Search",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "set NODE_ENV=development && nodemon ./index.js",
+    "prod": "set NODE_ENV=production && node ./index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +14,7 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2"
   }
 }
